--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,13 +4,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 60px);  
   background: radial-gradient(circle, #444 30%, #222 90%);
   color: white;
   text-align: center;
   padding: 0;
-  margin: 0;
-  overflow: hidden;
+  margin: 0; 
 }
 
 .heroContent {
